manifests/argocd/templates/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    #- web
    - websecure
  routes:
    - match: Host(`argocd.home.lcisp.it`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
        #kind: TraefikService
      #middlewares:
      #  - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: home-lcisp-it
